{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 72,
  "lineage": "ec595527-cadd-771f-80e9-a6f16a9c4812",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "first_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:internet-gateway/igw-0c5559dcae773835d",
            "id": "igw-0c5559dcae773835d",
            "owner_id": "862066027316",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-0b053992235e9cc0a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:route-table/rtb-03a50ffe226e90a38",
            "id": "rtb-03a50ffe226e90a38",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "function-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "function-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b053992235e9cc0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08508fb6cd9e41de7",
            "route_table_id": "rtb-03a50ffe226e90a38",
            "subnet_id": "subnet-0dfd3ed5e513b77e7"
          },
          "dependencies": [
            "aws_route_table.pub-rt",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dc274d1715b23a9",
            "route_table_id": "rtb-03a50ffe226e90a38",
            "subnet_id": "subnet-0fbd85cec39ad20cb"
          },
          "dependencies": [
            "aws_route_table.pub-rt",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0568ca6c6afefcbf5",
            "route_table_id": "rtb-03a50ffe226e90a38",
            "subnet_id": "subnet-0d08cd217b093ed26"
          },
          "dependencies": [
            "aws_route_table.pub-rt",
            "aws_subnet.pub-subnets",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:security-group/sg-0a477f47d76f02f10",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a477f47d76f02f10",
            "ingress": [],
            "name": "my-sec-grp",
            "name_prefix": "",
            "owner_id": "862066027316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "function-vpc-sg"
            },
            "tags_all": {
              "Name": "function-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b053992235e9cc0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-0dfd3ed5e513b77e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfd3ed5e513b77e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pub-sub1"
            },
            "tags_all": {
              "Name": "function-vpc-pub-sub1"
            },
            "vpc_id": "vpc-0b053992235e9cc0a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-0fbd85cec39ad20cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbd85cec39ad20cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pub-sub2"
            },
            "tags_all": {
              "Name": "function-vpc-pub-sub2"
            },
            "vpc_id": "vpc-0b053992235e9cc0a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-0d08cd217b093ed26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.168.3.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d08cd217b093ed26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "function-vpc-pub-sub3"
            },
            "tags_all": {
              "Name": "function-vpc-pub-sub3"
            },
            "vpc_id": "vpc-0b053992235e9cc0a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:vpc/vpc-0b053992235e9cc0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-079565a27ab5ad94a",
            "default_route_table_id": "rtb-07ddac4dfebc455b3",
            "default_security_group_id": "sg-02045ef4cf9d7150f",
            "dhcp_options_id": "dopt-04a1e7bf9456ee3aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b053992235e9cc0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ddac4dfebc455b3",
            "owner_id": "862066027316",
            "tags": {
              "Name": "function-vpc"
            },
            "tags_all": {
              "Name": "function-vpc"
            }
          }
        }
      ]
    }
  ]
}